--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="container container-flex">
             <h1>EBAC Motors</h1>
             <div class="menu-hamburger">
                 <span></span>
@@ -47,6 +47,204 @@
         <img src="./images/slide2.png" alt="Carro da BMW">
         <img src="./images/slide3.png" alt="Carro da Ford">
     </div>
+
+    <section id="sobre-a-loja">
+        <div class="container container-flex">
+            <img src="./images/loja.jpg" alt="Logo da loja EBAC Motors">
+            <div>
+                <h2>Sobre a EBAC Motors</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, explicabo ullam fugit quidem officia dolore quos, temporibus voluptatibus quod facilis mollitia, facere provident. Dolorum rem rerum deleniti error odit soluta?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, explicabo ullam fugit quidem officia dolore quos, temporibus voluptatibus quod facilis mollitia, facere provident. Dolorum rem rerum deleniti error odit soluta?
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Em destaque</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Promoções</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/carro-bmw.png" alt="Carro BMW">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automático, 4 portas, vidros e travas elétricas
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>R$ 75.000,00</strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="form-campo">
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone">
+                </div>
+                <div class="form-campo">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="form-campo">
+                    <label for="veiculo-interesse">Veículo de interesse:</label>
+                    <input type="text" id="veiculo-interesse">
+                </div>
+                <div class="form-campo">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="container container-flex">
+            <p>2025 &copy; EBAC Motors - Todos os direitos reservados</p>
+            <ul class="container-flex">
+                <li>
+                    <a href="#">
+                        <img src="./icones/facebook.png" alt="facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./icones/instagram.png" alt="instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./icones/youtube.png" alt="youtube">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
