--- a/index.html
+++ b/index.html
@@ -200,23 +200,23 @@
             <form>
                 <div class="form-campo">
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome">
+                    <input type="text" id="nome" name="nome">
                 </div>
                 <div class="form-campo">
                     <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone">
+                    <input type="tel" id="telefone" name="telefone">
                 </div>
                 <div class="form-campo">
                     <label for="email">E-mail:</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" name="email">
                 </div>
                 <div class="form-campo">
                     <label for="veiculo-interesse">Veículo de interesse:</label>
-                    <input type="text" id="veiculo-interesse">
+                    <input type="text" id="veiculo-interesse" name="veiculoInteresse">
                 </div>
                 <div class="form-campo">
                     <label for="mensagem">Mensagem:</label>
-                    <textarea id="mensagem"></textarea>
+                    <textarea id="mensagem" name="mensagem"></textarea>
                 </div>
                 <button type="submit">Enviar</button>
             </form>
@@ -248,6 +248,9 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#carousel-slick').slick({
@@ -255,6 +258,42 @@
             });
             $('.menu-hamburger').click(function(){
                 $('nav').slideToggle();
+            })
+
+            $('#telefone').mask('(00) 00000-0000')
+
+            $('form').validate({
+                rules:{
+                    nome: {
+                        required: true
+                    },
+                    email: {
+                        required: true,
+                        email:true
+                    },
+                    telefone: {
+                        required: true
+                    },
+                    mensagem:{
+                        required: true
+                    },
+                    veiculoInteresse:{
+                        required: false
+                    }
+
+                },
+                messages:{
+                    nome: "Por favor insira seu nome!"
+                },
+                submitHandler: function(form){
+                    console.log(form)
+                },
+                invalidHandler: function(evento, validador){
+                    let camposIncorretos = validador.numberOfInvalids();
+                    if(camposIncorretos){
+                        alert(`Existem ${camposIncorretos} campos incorretos`)
+                    }
+                }
             })
         });
     </script>
